# stheno

./: .coveragerc  .gitignore  .travis.yml  LICENCE  Makefile  README.md  README_process.py  README_without_examples.md  pyproject.toml  readme_example.py  readme_example1.1_hyperparameter_optimization.py  readme_example10_sparse.py  readme_example11_nonparametric_basis.py  readme_example12_optimisation_varz.py  readme_example12_optimization.py  readme_example12_optimization_varz.py  readme_example13_optimisation_torch.py  readme_example13_optimization_torch.py  readme_example1_simple_regression.py  readme_example2.py  readme_example2_decomposition.py  readme_example3.py  readme_example3_parametric.py  readme_example4.py  readme_example4_multi-output.py  readme_example5.py  readme_example5_integration.py  readme_example6.py  readme_example6_blr.py  readme_example7_gpar.py  readme_example8_gp-rnn.py  readme_example8_gp_rnn.py  readme_example9_product.py  requirements.readthedocs.txt  requirements.txt  setup.cfg  setup.py  todo.tasks
doc/: Makefile  conf.py  readme.rst
docs/: conf.py
stheno/: __init__.py  autograd.py  cache.py  eis.py  field.py  function_field.py  graph.py  input.py  jax.py  kernel.py  lazy.py  matrix.py  mean.py  measure.py  mokernel.py  momean.py  numpy.py  random.py  spd.py  tensorflow.py  tf.py  torch.py  util.py
tests/: __init__.py  eis_tests.py  kernel_tests.py  mean_tests.py  random_tests.py  test_boxing.py  test_cache.py  test_eis.py  test_field.py  test_graph.py  test_kernel.py  test_lazy.py  test_matrix.py  test_mean.py  test_measure.py  (+8 more)
(+134 files in other folders)
