[metadata]
name = stheno
version = 1.1.0
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Implementation of Gaussian processes in Python
url = https://github.com/wesselb/stheno
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
